--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ppm_tool
+spring.datasource.username=ppm_user
+spring.datasource.password=ppmpassword
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql: true
