--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=ppm_user
 spring.datasource.password=ppmpassword
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
