--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -11,6 +11,7 @@
     "classname": "0.0.0",
     "classnames": "^2.3.1",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -45,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
